--- a/style.css
+++ b/style.css
@@ -42,3 +42,44 @@ body {
     border: 0.1px dashed rgb(91, 91, 91);
     flex: 1;
 }
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 48px;
+}
+
+.OCbtns {
+    display: flex;
+    gap: 48px;
+}
+
+.ocbtn {
+    border-radius: 100%;
+    padding: 16px 20px;
+    background-color: rgb(0, 203, 203);
+    color: rgb(0, 108, 108);
+    font-weight: bold;
+    font-size: 20px;  
+    border-style: none;
+}
+
+.ocbtn:hover {
+    background-color:rgb(1, 146, 146);
+    cursor: pointer;
+}
+
+.createGrid{
+    background-color: rgb(0, 203, 203);
+    color: rgb(0, 108, 108);
+    border-radius: 10px;
+    border-style: none;
+    padding: 8px 32px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.createGrid:hover{
+    background-color:rgb(1, 146, 146);
+    cursor: pointer;
+}
