--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "ka1";
+    src: url(./ka1.ttf);
+}
+
 body {
     background-color: rgb(150, 150, 150);
     display: flex;
@@ -16,9 +21,10 @@ body {
 
 .screen {
     height: 500px;
-    width: 600px;
+    width: 550px;
     background-color: rgb(48, 48, 48);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 30px;
@@ -46,12 +52,13 @@ body {
 .buttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 48px;
 }
 
 .OCbtns {
     display: flex;
-    gap: 48px;
+    gap: 32px;
 }
 
 .ocbtn {
@@ -74,12 +81,31 @@ body {
     color: rgb(0, 108, 108);
     border-radius: 10px;
     border-style: none;
-    padding: 8px 32px;
+    padding: 4px 48px;
     font-size: 20px;
     font-weight: bold;
+    max-height: 36px;
+    margin-bottom: 32px;
 }
 
 .createGrid:hover{
     background-color:rgb(1, 146, 146);
     cursor: pointer;
+}
+
+.btnc {
+    margin-top: 32px;
+}
+
+.btno {
+    margin-bottom: 32px;
+}
+
+.logo {
+    font-weight: bold;
+    font-size: 24px;
+    padding: 16px;
+    padding-top: 32px;
+    color: rgb(187, 15, 15);
+    font-family: "ka1";
 }
